# repro

python/bindings/autogen/: README.md  WORKSPACE  misc.bzl  pybind11.BUILD.bazel  python.bzl
python/bindings/autogen/pybind11_ext/: BUILD.bazel  cpp_param_pybind.cc  cpp_param_pybind.h  cpp_template.py  cpp_template_pybind.h  mkdoc.py  pybind.bzl  pybind11_ext_pybind.h  type_pack.h  wrap_function.h  wrap_pybind.h
python/bindings/autogen/sample/: BUILD.bazel  sample.cc  sample.h
